# tundra

./: .ast-grep.yml  .auto-claude-security.json  .auto-claude-status  .claude_settings.json  .gitignore  AGENTS.md  BINARY_SIZE_SUMMARY.txt  BINARY_SIZE_VERIFICATION.md  CHANGELOG.md  COMPREHENSIVE_TEST_REPORT.md  COMPREHENSIVE_TEST_RESULTS.md  CONTRIBUTING.md  Cargo.toml  DATADOG_PROFILING_COMPARISON.md  DATADOG_PROFILING_COMPLETE.md  DATADOG_PROFILING_FINAL_RECOMMENDATION.md  DATADOG_PROFILING_GUIDE.md  DATADOG_PROFILING_SETUP.md  DATADOG_PROFILING_SUMMARY.md  DATADOG_SETUP_SUMMARY.md  DISCLAIMER.md  FINAL_TESTING_COMPLETE.md  GETTING_STARTED.md  MANUAL_VERIFICATION_GUIDE.md  Makefile  README.md  RUST_OBSERVABILITY_STATE_OF_ART_2026.md  RUST_PROFILING_GUIDE.md  TEST_SUMMARY.md  create_new_project.sh  dd_profiling_demo.sh  deny.toml  docs_verification_summary.md  fix_modal.sh  fix_modal2.sh  fix_modal3.sh  fix_modal4.sh  patch_http_api.sh  patch_layout.sh  patch_markdown.py  (+12 more)
_archive/agent-harness-v0/: Cargo.toml  PRODUCTION.md  README.md
_archive/agent-harness-v0/docs/: ARCHITECTURE.md  EXAMPLES.md  GETTING_STARTED.md  TROUBLESHOOTING.md
_archive/agent-harness-v0/src/: agent.rs  circuit_breaker.rs  connection_pool.rs  health.rs  lib.rs  main.rs  memory.rs  memory_backends.rs  memory_management.rs  orchestrator.rs  provider.rs  quota.rs  rate_limiter.rs  retry.rs  security.rs  stream.rs  tool.rs  types.rs  validation.rs  validation_harness.rs
_archive/agent-harness-v0/tests/: integration_tests.rs
app/leptos-ui/: Cargo.toml  Trunk.toml  duckdb-bridge.js  index.html  poker-audio-worklet.js  poker-audio.js  style.css  style.css.backup  terminal_runtime.js  webgpu-analytics.js
app/leptos-ui/.playwright-cli/: page-2026-02-22T03-24-15-131Z.yml  page-2026-02-22T03-25-02-577Z.yml  page-2026-02-22T03-26-27-056Z.yml  page-2026-02-22T03-27-28-535Z.yml  page-2026-02-22T03-27-31-806Z.yml  page-2026-02-22T03-28-02-881Z.yml  page-2026-02-22T03-33-41-087Z.yml  page-2026-02-22T03-36-33-944Z.yml  page-2026-02-22T03-41-00-366Z.yml
app/leptos-ui/public/: index.html
app/leptos-ui/src/: analytics_store.rs  api.rs  duckdb.rs  events.rs  i18n.rs  lib.rs  poker_audio.rs  state.rs  themed.rs  types.rs  webgpu.rs
app/leptos-ui/tests/: a11y_tests.rs  capture_helper.js  component_tests.rs  debug_sidebar_test.sh  js_sidebar_test.sh  sidebar_animation_test.rs  sidebar_debug.js  sidebar_playwright_test.sh  simple_sidebar_test.sh  test_runner.js  theme_debug.js
app/tauri/: Cargo.toml  SHUTDOWN_VERIFICATION.md  TRAY_PERSISTENCE_VERIFICATION.md  tauri.conf.json
app/tauri/capabilities/: default.json
app/tauri/src/: bridge.rs  commands.rs  error.rs  lib.rs  main.rs  notifications.rs  sounds.rs  state.rs  tray.rs
app/tauri/tests/: commands_test.rs  e2e_bead_lifecycle.rs  e2e_desktop_app.rs  verify_shutdown.sh
crates/at-agents/: ARCHITECTURE.md  Cargo.toml
crates/at-agents/src/: approval.rs  claude_runtime.rs  claude_session.rs  executor.rs  lib.rs  lifecycle.rs  orchestrator.rs  profiles.rs  prompts.rs  registry.rs  roles.rs  state_machine.rs  supervisor.rs  task_orchestrator.rs  task_runner.rs
crates/at-agents/tests/: agent_profiles_test.rs  roles_and_approval_test.rs  state_machine_test.rs  supervisor_test.rs  task_orchestrator_test.rs
crates/at-bridge/: Cargo.toml  README.md
crates/at-bridge/src/: api_error.rs  auth.rs  command_registry.rs  commands.rs  event_bus.rs  http_api.rs  intelligence_api.rs  ipc.rs  json_response.rs  lib.rs  notifications.rs  oauth_token_manager.rs  origin_validation.rs  protocol.rs  rate_limit_middleware.rs  terminal.rs  terminal_ws.rs  transport.rs
crates/at-bridge/tests/: api_integration_test.rs  auth_middleware_test.rs  body_limit_test.rs  compression_test.rs  e2e_memory_leak_verification.rs  event_bus_advanced_test.rs  event_bus_test.rs  http_api_test.rs  input_validation_verification_test.rs  intelligence_api_test.rs  ipc_test.rs  kanban_board_test.rs  memory_cleanup_test.rs  notification_store_test.rs  oauth_csrf_test.rs  oauth_security_test.rs  pagination_test.rs  pr_releases_archival_test.rs  protocol_test.rs  security_headers_test.rs  settings_api_test.rs  task_api_test.rs  terminal_api_test.rs  websocket_origin_test.rs
crates/at-cli/: Cargo.toml
crates/at-cli/src/: main.rs
crates/at-core/: Cargo.toml
crates/at-core/src/: cache.rs  config.rs  context_engine.rs  context_steering.rs  crypto.rs  file_watcher.rs  git2_ops.rs  git_read_adapter.rs  lib.rs  lockfile.rs  repo.rs  rlm.rs  session_store.rs  settings.rs  types.rs  worktree.rs  worktree_manager.rs
crates/at-core/tests/: cache_test.rs  config_test.rs  log_truncation_test.rs  settings_test.rs  task_detail_test.rs  task_files_test.rs  types_test.rs  worktree_test.rs
crates/at-daemon/: Cargo.toml
crates/at-daemon/src/: benchmarks.rs  daemon.rs  environment.rs  heartbeat.rs  kpi.rs  lib.rs  main.rs  metrics.rs  orchestrator.rs  patrol.rs  profiling.rs  profiling_old.rs  profiling_tests.rs  scheduler.rs
crates/at-daemon/tests/: heartbeat_test.rs  integration_test.rs  orchestrator_test.rs  patrol_test.rs  scheduler_test.rs  task_lifecycle_test.rs
crates/at-harness/: Cargo.toml
crates/at-harness/src/: builtin_tools.rs  circuit_breaker.rs  lib.rs  mcp.rs  provider.rs  rate_limiter.rs  security.rs  shutdown.rs  trace_ctx.rs
crates/at-harness/tests/: circuit_breaker_test.rs  harness_integration_test.rs  rate_limiter_test.rs  security_test.rs
crates/at-integrations/: Cargo.toml
crates/at-integrations/src/: lib.rs  types.rs
crates/at-integrations/tests/: github_integration_test.rs  github_oauth_test.rs  gitlab_integration_test.rs  linear_integration_test.rs
crates/at-intelligence/: Cargo.toml
crates/at-intelligence/src/: api_profiles.rs  changelog.rs  cost_tracker.rs  ideation.rs  insights.rs  lib.rs  llm.rs  memory.rs  model_router.rs  roadmap.rs  runner.rs  spec.rs  token_cache.rs
crates/at-intelligence/tests/: changelog_test.rs  ideation_engine_test.rs  (+3 more)
crates/at-session/: Cargo.toml  README.md
crates/at-telemetry/: Cargo.toml
crates/at-tui/: Cargo.toml
(+224 files in other folders)
