[workspace]
resolver = "2"
members = [
    "crates/at-core",
    "crates/at-harness",
    "crates/at-session",
    "crates/at-agents",
    "crates/at-daemon",
    "crates/at-telemetry",
    "crates/at-cli",
    "crates/at-bridge",
    "crates/at-tui",
    "crates/at-integrations",
    "crates/at-intelligence",
    "app/tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.91"

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "time", "macros", "sync", "process", "signal", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
flume = "0.11"
dashmap = "6"
ratatui = "0.29"
crossterm = "0.28"
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
octocrab = "0.43"
reqwest = { version = "0.12", features = ["json"] }
ahash = { version = "0.8", features = ["serde"] }
mimalloc = "0.1"
notify = { version = "7", default-features = false, features = ["macos_fsevent"] }
crossbeam-channel = "0.5"
git2 = "0.20"
subtle = "2"
tauri = { version = "2", features = ["devtools"] }
tauri-build = "2"
datadog-tracing = "0.3"
datadog-apm-sync = "0.8"
tracing-datadog = "0.6"
opentelemetry = "0.21"
opentelemetry-datadog = "0.9"
tracing-opentelemetry = "0.22"
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }

# ---------------------------------------------------------------------------
# Profiles — M-series optimized
# ---------------------------------------------------------------------------

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
opt-level = 3

[profile.dev]
opt-level = 1
incremental = true  # Explicit incremental compilation for faster dev builds

# WASM-specific release profile (smaller binaries)
[profile.release.package."*"]
# Default: use release settings

# Optimize dependencies separately (faster builds, smaller binaries)
[profile.release.package."at-leptos-ui"]
opt-level = 3
codegen-units = 1
