[package]
name = "agent-harness"
version = "0.1.0"
edition = "2021"
description = "A multi-agent orchestrator harness with tool calling, memory, streaming, and retry support"

[lib]
path = "src/lib.rs"

[[bin]]
name = "agent-harness"
path = "src/main.rs"

[[bin]]
name = "interactive"
path = "src/bin/interactive.rs"

[[bin]]
name = "demo"
path = "src/bin/demo.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
async-trait = "0.1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
tokio-stream = "0.1"
bytes = "1"
anyhow = "1"
axum = "0.7"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio-rusqlite = "0.6"
regex = "1.10"

[dev-dependencies]
futures = "0.3"
tempfile = "3"
