[package]
name = "at-leptos-ui"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
at-api-types = { path = "../../crates/at-api-types" }
leptos = { version = "0.7", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window", "Document", "HtmlElement", "HtmlInputElement", "console",
    "DragEvent", "DataTransfer", "Element", "CssStyleDeclaration",
    "Request", "RequestInit", "Response", "Headers",
    "WebSocket", "MessageEvent", "CloseEvent", "ErrorEvent",
    "DomTokenList", "Navigator", "Clipboard", "MouseEvent",
] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
uuid = { version = "1", features = ["v4", "serde", "js"] }
console_error_panic_hook = "0.1"
fluent = { version = "0.16", optional = true }
fluent-bundle = { version = "0.16", optional = true }
fluent-syntax = { version = "0.11", optional = true }
unic-langid = { version = "0.9", optional = true }
reactive_graph = "0.1"
send_wrapper = "0.6"
futures = "0.3"
pulldown-cmark = { version = "0.13.0", optional = true }

[features]
default = ["markdown", "i18n"]
markdown = ["pulldown-cmark"]
i18n = ["fluent", "fluent-bundle", "fluent-syntax", "unic-langid"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
