[package]
name = "at-tauri"
version.workspace = true
edition.workspace = true

[lib]
name = "at_tauri"
path = "src/lib.rs"

[dependencies]
at-core = { path = "../../crates/at-core" }
at-telemetry = { path = "../../crates/at-telemetry" }
at-bridge = { path = "../../crates/at-bridge" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
flume = { workspace = true }
tokio-rusqlite = "0.6"

[dev-dependencies]
tokio = { workspace = true }
at-agents = { path = "../../crates/at-agents" }
at-bridge = { path = "../../crates/at-bridge" }
