[package]
name = "at-agents"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
at-core = { path = "../at-core" }
at-session = { path = "../at-session" }
at-bridge = { path = "../at-bridge" }
at-intelligence = { path = "../at-intelligence" }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
flume = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
async-trait = { workspace = true }
flume = { workspace = true }
