[package]
name = "at-bridge"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
at-core = { path = "../at-core" }
at-harness = { path = "../at-harness" }
at-integrations = { path = "../at-integrations" }
at-intelligence = { path = "../at-intelligence" }
at-session = { path = "../at-session" }
at-telemetry = { path = "../at-telemetry" }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
flume = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
async-trait = { workspace = true }
futures-util = "0.3"
ahash = { workspace = true }
subtle = { workspace = true }
ring = "0.17"
zeroize = { version = "1", features = ["derive"] }

[features]
default = ["libgit2"]
libgit2 = ["at-core/libgit2"]

[dev-dependencies]
tokio = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = "0.28"
futures-util = "0.3"
chrono = { workspace = true }
