[package]
name = "at-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "at"
path = "src/main.rs"

[dependencies]
at-core = { path = "../at-core" }
at-telemetry = { path = "../at-telemetry" }
tokio = { workspace = true }
clap = { version = "4", features = ["derive"] }
anyhow = { workspace = true }
tracing = { workspace = true }
dirs = "6"
