[package]
name = "at-cli"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "at"
path = "src/main.rs"

[dependencies]
at-core = { path = "../at-core" }
at-telemetry = { path = "../at-telemetry" }
tokio = { workspace = true }
clap = { version = "4", features = ["derive"] }
anyhow = { workspace = true }
tracing = { workspace = true }
dirs = "6"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
mimalloc = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
