[package]
name = "at-core"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
tokio-rusqlite = "0.6"
tokio = { workspace = true }
toml = "0.8"
dirs = "6"
notify = { workspace = true }
crossbeam-channel = { workspace = true }
git2 = { workspace = true, optional = true }
libc = "0.2"
lru = "0.12"

[features]
default = ["libgit2"]
libgit2 = ["dep:git2"]

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
