[package]
name = "at-daemon"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "at-daemon"
path = "src/main.rs"

[dependencies]
at-core = { path = "../at-core" }
at-telemetry = { path = "../at-telemetry" }
at-session = { path = "../at-session" }
at-agents = { path = "../at-agents" }
at-bridge = { path = "../at-bridge" }
at-harness = { path = "../at-harness" }
at-intelligence = { path = "../at-intelligence" }
tokio = { workspace = true }
tracing.workspace = true
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
flume = { workspace = true }
axum = { workspace = true }
async-trait = { workspace = true }
mimalloc = { workspace = true }
toml = "0.8"
tower-http = { workspace = true }
datadog-tracing = { workspace = true }
datadog-apm-sync = { workspace = true }
tracing-datadog = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-datadog = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
dotenv = "0.15"
libc = "0.2"
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
tracing-subscriber.workspace = true

[dev-dependencies]
tokio = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = "0.28"
futures-util = "0.3"
