[package]
name = "at-integrations"
version.workspace = true
edition.workspace = true

[dependencies]
at-core = { path = "../at-core" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
octocrab = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
