[package]
name = "at-intelligence"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
at-core = { path = "../at-core" }
at-harness = { path = "../at-harness" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
async-trait = { workspace = true }
futures-util = "0.3"
ahash = { workspace = true }

[dev-dependencies]
tempfile = "3"
