[package]
name = "at-session"
version.workspace = true
edition.workspace = true

[dependencies]
at-core = { path = "../at-core" }
tokio = { workspace = true }
async-trait = { workspace = true }
flume = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
portable-pty = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
