[package]
name = "at-telemetry"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tokio = { workspace = true }
ahash = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
