[package]
name = "at-tui"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "at-tui"
path = "src/main.rs"

[features]
default = []
## Enable the wgpu GPU-accelerated backend for ratatui.
##
## When active, the TUI renders via the GPU at ~800 fps with support for
## custom WGSL PostProcessor shaders. Requires a GPU and a windowed
## environment (not plain SSH).
gpu = ["dep:ratatui-wgpu"]

[dependencies]
at-api-types = { path = "../at-api-types" }
at-core = { path = "../at-core" }
at-telemetry = { path = "../at-telemetry" }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
flume = { workspace = true }
unicode-width = "0.2"
dirs = "6"
tachyonfx = "0.11"
ratatui-wgpu = { version = "0.2", optional = true }
